--- a/DockerfileProvider
+++ b/DockerfileProvider
@@ -13,7 +13,7 @@ COPY apis/ apis/
 COPY internal/ internal/
 COPY pkg/ pkg/
 # Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager cmd/providercmd/main.go
 # Use distroless as minimal base image to package the manager binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 #FROM gcr.io/distroless/static:nonroot
