--- a/DockerfileWorker
+++ b/DockerfileWorker
@@ -13,7 +13,7 @@ COPY apis/ apis/
 COPY internal/ internal/
 COPY pkg/ pkg/
 # Build
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager cmd/configproxycmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager cmd/workercmd/main.go
 # Use distroless as minimal base image to package the manager binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 #FROM gcr.io/distroless/static:nonroot
@@ -29,6 +29,9 @@ RUN apk add --update && \
     rm -rf /tmp/*/var/cache/apk/*
 
 RUN curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | sh
+RUN GRPC_HEALTH_PROBE_VERSION=v0.3.1 && \
+    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
+    chmod +x /bin/grpc_health_probe
 WORKDIR /
 COPY --from=builder /workspace/manager .
 USER 65532:65532
