--- a/DockerfileReconciler
+++ b/DockerfileReconciler
@@ -2,6 +2,7 @@
 FROM golang:1.17 as builder
 WORKDIR /workspace
 # Copy the Go Modules manifests
+ENV GOPATH /workspace
 COPY go.mod go.mod
 COPY go.sum go.sum
 # cache deps before building and copying source so that we don't need to re-download as much
@@ -28,7 +29,7 @@ RUN apk add --update && \
     apk add bonding && \
     rm -rf /tmp/*/var/cache/apk/*
 
-RUN curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | sh
+#RUN curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | sh
 WORKDIR /
 COPY --from=builder /workspace/manager .
 USER 65532:65532
