--- a/DockerfileWorker
+++ b/DockerfileWorker
@@ -28,7 +28,7 @@ RUN apk add --update && \
     apk add bonding && \
     rm -rf /tmp/*/var/cache/apk/*
 
-RUN curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | sh
+#RUN curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | sh
 WORKDIR /
 COPY --from=builder /workspace/manager .
 USER 65532:65532
