added new provider logic

--- a/examples/package-config-srl-integrated.yaml
+++ b/examples/package-config-srl-integrated.yaml
@@ -1,8 +1,8 @@
 apiVersion: pkg.ndd.yndd.io/v1
 kind: Provider
 metadata:
-  name: ndd-config-srl
+  name: config-srl-integrated
   namespace: ndd-system
 spec:
-  package: yndd/ndd-config-srl:latest
+  package: yndd/config-srl-integrated:latest
   packagePullPolicy: Always
