--- a/package/worker/ndd.yaml
+++ b/package/worker/ndd.yaml
@@ -8,8 +8,8 @@ spec:
     name: config-srl-worker
     type: statefulset
     permissionRequests:
-    - apiGroups: [dvr.ndd.yndd.io]
-      resources: [targets]
+    - apiGroups: [target.yndd.io]
+      resources: [targets, targets/status]
       verbs: [get, list, watch, update, patch, create, delete]
     containers:
     - container:
