--- a/DockerfileWorker
+++ b/DockerfileWorker
@@ -12,7 +12,7 @@ RUN go mod download
 COPY cmd/ cmd/
 COPY apis/ apis/
 COPY internal/ internal/
-COPY pkg/ pkg/
+##COPY pkg/ pkg/
 # Build
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o manager cmd/workercmd/main.go
 # Use distroless as minimal base image to package the manager binary
@@ -29,7 +29,7 @@ RUN apk add --update && \
     apk add bonding && \
     rm -rf /tmp/*/var/cache/apk/*
 
-#RUN curl -sL https://github.com/karimra/gnmic/raw/master/install.sh | sh
+RUN curl -sL https://get-gnmic.kmrd.dev | sh
 WORKDIR /
 COPY --from=builder /workspace/manager .
 USER 65532:65532
