--- a/package/worker/ndd.yaml
+++ b/package/worker/ndd.yaml
@@ -11,6 +11,9 @@ spec:
     - apiGroups: [target.yndd.io]
       resources: [targets, targets/status]
       verbs: [get, list, watch, update, patch, create, delete]
+    - apiGroups: ["*"]
+      resources: [secrets]
+      verbs: [get, list, watch]
     containers:
     - container:
         name: kube-rbac-proxy
@@ -24,9 +27,11 @@ spec:
         - containerPort: 8443
           name: https
     - container:
-        name: worker
+        name: controller
         image: yndd/config-srl-worker-controller:latest
+        imagePullPolicy: Always
       extras:
-        - {name: grpc, service: true, certificate: true, port: 9999, target-port: 9999}
-        - {name: metrics, service: true,  port: 8443, target-port: 443}
+        - {name: grpc, service: true, certificate: true, port: 9999, targetPort: 9999}
+        - {name: metrics, service: true,  port: 8443, targetPort: 443}
         - {name: profiler, volume: true}
+        - {name: headless-grpc, service: true, port: 9999, targetPort: 9999}
