--- a/package/reconciler/crds/config.yndd.io_srlconfigs.yaml
+++ b/package/reconciler/crds/config.yndd.io_srlconfigs.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
-  name: srlconfigs.srl.config.ndd.yndd.io
+  name: srlconfigs.config.yndd.io
 spec:
-  group: srl.config.ndd.yndd.io
+  group: config.yndd.io
   names:
     categories:
     - ndd
